--- a/miku.html
+++ b/miku.html
@@ -16,14 +16,14 @@
     <div class="intro"><h1>WELCOME</h1></div>
     <!--welcome menu-->
     <div class="menu">
-        <a href="menu/web_project.html" class="link1"><h3>Web Project</h3></a>
-        <a href="menu/gfx_project.html" class="link1"><h3>GFX Project</h3></a>
-        <a href="menu/favorite_song.html" class="link1"><h3>favorite Song</h3></a>
-        <a href="menu/social_media.html" class="link1"><h3>Social Media</h3></a>
-        <a href="menu/contact.html" class="link1"><h3>contact me</h3></a>
+        <a href="web_project.html" class="link1"><h3>Web Project</h3></a>
+        <a href="gfx_project.html" class="link1"><h3>GFX Project</h3></a>
+        <a href="favorite_song.html" class="link1"><h3>favorite Song</h3></a>
+        <a href="social_media.html" class="link1"><h3>Social Media</h3></a>
+        <a href="contact.html" class="link1"><h3>contact me</h3></a>
     </div>
     <!--hatsune miku image-->
-    <img src="assets/main-miku.png" alt="miku" class="miku">
+    <img src="main-miku.png" alt="miku" class="miku">
 
     <!--miku back-->
     <div class="back_miku"></div>
