--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="miku.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,14 +16,14 @@
     <div class="intro"><h1>WELCOME</h1></div>
     <!--welcome menu-->
     <div class="menu">
-        <a href="web_project.html" class="link1"><h3>Web Project</h3></a>
-        <a href="gfx_project.html" class="link1"><h3>GFX Project</h3></a>
-        <a href="favorite_song.html" class="link1"><h3>favorite Song</h3></a>
-        <a href="social_media.html" class="link1"><h3>Social Media</h3></a>
-        <a href="contact.html" class="link1"><h3>contact me</h3></a>
+        <a href="menu/web_project.html" class="link1"><h3>Web Project</h3></a>
+        <a href="menu/gfx_project.html" class="link1"><h3>GFX Project</h3></a>
+        <a href="menu/favorite_song.html" class="link1"><h3>favorite Song</h3></a>
+        <a href="menu/social_media.html" class="link1"><h3>Social Media</h3></a>
+        <a href="menu/contact.html" class="link1"><h3>contact me</h3></a>
     </div>
     <!--hatsune miku image-->
-    <img src="main-miku.png" alt="miku" class="miku">
+    <img src="assets/main-miku.png" alt="miku" class="miku">
 
     <!--miku back-->
     <div class="back_miku"></div>
