--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="menu/contact.html" class="link1"><h3>contact me</h3></a>
     </div>
     <!--hatsune miku image-->
-    <img src="assets/main-miku.png" alt="miku" class="miku">
+    <img src="main-miku.png" alt="miku" class="miku">
 
     <!--miku back-->
     <div class="back_miku"></div>
