--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="intro"><h1 id="txt_col">WELCOME</h1></div>
     <!--welcome menu-->
     <div class="menu" id="col_menu">
-        <a href="menu/web_project.html" class="link1"><h3 class="option">Web Project</h3></a>
+        <a href="https://orde2201.github.io/sasayaku/" class="link1"><h3 class="option">Web Project</h3></a>
         <a href="menu/gfx_project.html" class="link1"><h3 class="option">GFX Project</h3></a>
         <a href="menu/favorite_song.html" class="link1"><h3 class="option">favorite Song</h3></a>
         <a href="menu/social_media.html" class="link1"><h3 class="option">Social Media</h3></a>
